--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,41 @@
+#spring.application.name=BooksAuthors
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
+#spring.datasource.username=system
+#spring.datasource.password=oracle
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
 spring.application.name=BooksAuthors
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
-spring.datasource.username=system
-spring.datasource.password=oracle
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+# ======= CONFIGURACIÓN HIKARI (POOL DE CONEXIONES) =======
+# Tiempo máximo para establecer conexión (30 segundos)
+spring.datasource.hikari.connection-timeout=30000
+# Tiempo máximo para que el pool se inicialice (60 segundos)
+spring.datasource.hikari.initialization-fail-timeout=60000
+# No fallar inmediatamente si no puede conectar
+spring.datasource.hikari.initialization-fail-fast=false
+# Tiempo máximo de vida de una conexión (30 minutos)
+spring.datasource.hikari.max-lifetime=1800000
+# Tiempo máximo de inactividad (10 minutos)
+spring.datasource.hikari.idle-timeout=600000
+# Tamaño mínimo del pool
+spring.datasource.hikari.minimum-idle=2
+# Tamaño máximo del pool
+spring.datasource.hikari.maximum-pool-size=10
+# Query de validación
+spring.datasource.hikari.connection-test-query=SELECT 1 FROM dual
+
+# ======= CONFIGURACIÓN ADICIONAL PARA ORACLE =======
+# Configuración específica para el driver Oracle
+spring.datasource.oracle.jdbc.timeout=30
+spring.datasource.oracle.net.connect-timeout=30
+spring.datasource.oracle.read-timeout=30
+
+# ======= CONFIGURACIÓN JPA/HIBERNATE =======
+spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
